--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 	},
 	"homepage": "https://github.com/thoughtsunificator/domodel-socket-chat-client#readme",
 	"devDependencies": {
-		"browser-sync": "^2.26.7"
+		"browser-sync": "^2.26.7",
+		"eslint": "^7.0.0"
 	},
 	"dependencies": {},
 	"keywords": [
